[package]
name = "rust_vpn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
aes-gcm = "0.10"
rand = "0.8"
x25519-dalek = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
async-trait = "0.1"

[[example]]
name = "packet_size"
path = "examples/packet_size.rs"

[[example]]
name = "multiple_clients"
path = "examples/multiple_clients.rs"